tests/ui/dyn-star/union.stderr
warning: the feature `dyn_star` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/union.rs:1:12
   |
LL | #![feature(dyn_star)]
   |            ^^^^^^^^
   |
   = note: see issue #102425 <https://github.com/rust-lang/rust/issues/102425> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: `Union` needs to have the same ABI as a pointer
  --> $DIR/union.rs:14:9
   |
LL |     bar(Union { x: 0usize });
   |         ^^^^^^^^^^^^^^^^^^^ `Union` needs to be a pointer-like type
   |
   = help: the trait `PointerLike` is not implemented for `Union`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
